--- a/testform.html
+++ b/testform.html
@@ -13,7 +13,7 @@
         <input id="name" type="text" required placeholder="name here"></label><br>
       <label for="email" id="email-label"> 
         What is your email? <input id="email" type="email" required placeholder="email-here">
-      </label><br>
+    </label><br>
       <label for="number-label" id="number-label"> What is your phone number?<input id="number" type="number" min="0" max="9999999999" placeholder="number here"></label><br>
       
       <label for="grade year"> What year are you?
@@ -26,6 +26,7 @@
           <option value="4">Senior</option>
           <option value="5">Graduate Student</option>
         </select> <br>
+        </label>
 
   <legend>What department are you apart of? </legend>
       <label for="eecs-dep">  <input type="radio" id="eecs-dep" name="department" class="inline" checked value="eecs"> EECS </label> <br>
@@ -35,7 +36,7 @@
     <input class="inline" id="airport" type="checkbox" name="airport" required value="tys"> TYS </input>
     <input class="inline" id="airport" type="checkbox" name="airport" required value="bna"> BNA </input>
     <input class="inline" id="airport" type="checkbox" name="airport" required value="atl"> ATL </input> 
-    <br>
+    <br> </label>
 
     <label for="reason">Why do you want to come?
       <textarea id="reason" name="reason" rows="3" cols="30" placeholder="I would like to come on the trip because..."></textarea>
